--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
-<link href="/www/assets/styles/main.ab099657b53c7a5d40fb.css" rel="stylesheet"></head>
+</head>
 <body>
   <div id="root"></div>
-  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-<script type="text/javascript" src="/www/assets/scripts/main.5a77a3970579692b9dfb.js"></script><script type="text/javascript" src="/www/assets/scripts/vendors~main.0d5ac581762c0de16a2a.js"></script></body>
+<script type="text/javascript" src="/www/vendors~main.aa660d232be270cf9fb4.js"></script><script type="text/javascript" src="/www/main.f6c56c8c4d44105394b5.js"></script></body>
 </html>
